<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KisaYear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="-116dp">

        <ImageView
            android:id="@+id/h_top"
            android:layout_width="380sp"
            android:layout_height="500sp"
            android:background="@drawable/white_bg"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/kisa_year"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.007" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/year_2022"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.172" />

        <ImageButton
            android:id="@+id/h_back"
            android:layout_width="25sp"
            android:layout_height="30sp"
            android:background="@drawable/back_btn"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>