<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamEnd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="0dp">



        <ImageView
            android:id="@+id/select_test_view"
            android:layout_width="350dp"
            android:layout_height="330dp"
            android:background="@drawable/white_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/exam_end"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/select_test_view"
            app:layout_constraintEnd_toEndOf="@+id/select_test_view"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="@+id/select_test_view"
            app:layout_constraintTop_toTopOf="@+id/select_test_view"
            app:layout_constraintVertical_bias="0.005" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:gravity="center"
            android:text="@string/congratulaion"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/select_test_view"
            app:layout_constraintEnd_toEndOf="@+id/select_test_view"
            app:layout_constraintStart_toStartOf="@+id/select_test_view"
            app:layout_constraintTop_toTopOf="@+id/select_test_view"
            app:layout_constraintVertical_bias="0.254" />

        <TextView
            android:id="@+id/exam_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/exam_score"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/select_test_view"
            app:layout_constraintEnd_toEndOf="@+id/select_test_view"
            app:layout_constraintStart_toStartOf="@+id/select_test_view"
            app:layout_constraintTop_toTopOf="@+id/select_test_view"
            app:layout_constraintVertical_bias="0.6" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:background="@drawable/start_btn2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_test_view"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/check_result"
            android:textColor="@color/main"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/next"
            app:layout_constraintEnd_toEndOf="@+id/next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/next"
            app:layout_constraintTop_toTopOf="@+id/next"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/h_back"
            android:layout_width="25sp"
            android:layout_height="30sp"
            android:background="@drawable/back_btn"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>