<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="-116dp">



        <ImageView
            android:id="@+id/h_top"
            android:layout_width="375sp"
            android:layout_height="700sp"
            android:background="@drawable/home_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"/>


        <ImageView
            android:id="@+id/h_top2"
            android:layout_width="363sp"
            android:layout_height="150sp"
            android:background="@drawable/home_top_box"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.055" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/main_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dgm"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/main"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@id/h_top2"
            app:layout_constraintEnd_toEndOf="@id/h_top2"
            app:layout_constraintHorizontal_bias="0.675"
            app:layout_constraintStart_toStartOf="@id/h_top2"
            app:layout_constraintTop_toTopOf="@id/h_top2"
            app:layout_constraintVertical_bias="0.505" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/h_top2"
            app:layout_constraintEnd_toEndOf="@id/h_top2"
            app:layout_constraintHorizontal_bias="0.259"
            app:layout_constraintStart_toStartOf="@id/h_top2"
            app:layout_constraintTop_toTopOf="@id/h_top2"
            app:layout_constraintVertical_bias="0.46" />

        <ImageView
            android:id="@+id/h_loginbox"
            android:layout_width="350sp"
            android:layout_height="230sp"
            android:background="@drawable/input_box"
            android:contentDescription="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.43" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/h_loginbox"
            app:layout_constraintEnd_toEndOf="@+id/h_loginbox"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="@+id/h_loginbox"
            app:layout_constraintTop_toTopOf="@id/h_loginbox"
            app:layout_constraintVertical_bias="0.227" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_loginbox"
            app:layout_constraintEnd_toEndOf="@+id/h_loginbox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/h_loginbox"
            app:layout_constraintVertical_bias="0.53" />

        <EditText
            android:id="@+id/h_id"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:autofillHints="username"
            android:background="@drawable/input_text"
            android:contentDescription="@string/id"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/h_loginbox"
            app:layout_constraintEnd_toEndOf="@+id/h_loginbox"
            app:layout_constraintHorizontal_bias="0.681"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/h_loginbox"
            app:layout_constraintVertical_bias="0.194"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/h_password"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:autofillHints="password"
            android:background="@drawable/input_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/h_loginbox"
            app:layout_constraintEnd_toEndOf="@+id/h_loginbox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/h_id"
            app:layout_constraintTop_toTopOf="@+id/h_loginbox"
            app:layout_constraintVertical_bias="0.53"
            tools:ignore="LabelFor" />

        <CheckBox
            android:id="@+id/h_cb"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:background="@drawable/checkbox"
            android:button="@android:color/transparent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/h_loginbox"
            app:layout_constraintEnd_toEndOf="@+id/h_loginbox"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/h_loginbox"
            app:layout_constraintTop_toTopOf="@+id/h_loginbox"
            app:layout_constraintVertical_bias="0.79" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/rem_id"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_loginbox"
            app:layout_constraintEnd_toEndOf="@id/h_loginbox"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/h_cb"
            app:layout_constraintTop_toTopOf="@id/h_loginbox"
            app:layout_constraintVertical_bias="0.78" />

        <ImageButton
            android:id="@+id/h_login"
            android:layout_width="250sp"
            android:layout_height="65sp"
            android:background="@drawable/login_button"
            android:contentDescription="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.735" />

        <TextView
            android:id="@+id/loginView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/main"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_login"
            app:layout_constraintEnd_toEndOf="@+id/h_login"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="@+id/h_login"
            app:layout_constraintTop_toTopOf="@+id/h_login"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/h_signup"
            android:layout_width="250sp"
            android:layout_height="65sp"
            android:background="@drawable/login_button"
            android:contentDescription="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/main"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_signup"
            app:layout_constraintEnd_toEndOf="@+id/h_signup"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="@+id/h_signup"
            app:layout_constraintTop_toTopOf="@+id/h_signup"
            app:layout_constraintVertical_bias="0.5" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.785"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.684"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.785"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:fontFamily="@font/dgm"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.79" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


