<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="389dp">


        <ImageView
            android:id="@+id/h_top"
            android:layout_width="375sp"
            android:layout_height="700sp"
            android:background="@drawable/home_bg"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516" />

        <ImageView
            android:id="@+id/h_top2"
            android:layout_width="363sp"
            android:layout_height="150sp"
            android:background="@drawable/home_top_box"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.01" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/h_top2"
            app:layout_constraintEnd_toEndOf="@id/h_top2"
            app:layout_constraintHorizontal_bias="0.150"
            app:layout_constraintStart_toStartOf="@id/h_top2"
            app:layout_constraintTop_toTopOf="@id/h_top2"
            app:layout_constraintVertical_bias="0.410" />

        <TextView
            android:id="@+id/main_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dgm"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/main"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@id/h_top2"
            app:layout_constraintEnd_toEndOf="@id/h_top2"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toStartOf="@id/h_top2"
            app:layout_constraintTop_toTopOf="@id/h_top2"
            app:layout_constraintVertical_bias="0.454" />


        <ImageView
            android:id="@+id/h_login_box"
            android:layout_width="350sp"
            android:layout_height="230sp"
            android:background="@drawable/input_box"
            android:contentDescription="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.555" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_login_box"
            app:layout_constraintEnd_toEndOf="@+id/h_login_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textview2"
            app:layout_constraintTop_toTopOf="@+id/h_login_box"
            app:layout_constraintVertical_bias="0.461" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/pw_check"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_login_box"
            app:layout_constraintEnd_toEndOf="@+id/h_login_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textview2"
            app:layout_constraintTop_toTopOf="@+id/h_login_box"
            app:layout_constraintVertical_bias="0.738" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/h_login_box"
            app:layout_constraintEnd_toEndOf="@+id/h_login_box"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="@+id/h_login_box"
            app:layout_constraintTop_toTopOf="@+id/h_login_box"
            app:layout_constraintVertical_bias="0.177" />

        <EditText
            android:id="@+id/h_id"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:autofillHints="username"
            android:background="@drawable/input_text"
            android:contentDescription="@string/id"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_login_box"
            app:layout_constraintHorizontal_bias="0.823"
            app:layout_constraintStart_toEndOf="@+id/textview2"
            app:layout_constraintTop_toTopOf="@+id/h_login_box"
            app:layout_constraintVertical_bias="0.067"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/h_password"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:autofillHints="password"
            android:background="@drawable/input_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/h_login_box"
            app:layout_constraintEnd_toEndOf="@+id/h_login_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/h_id"
            app:layout_constraintTop_toTopOf="@+id/h_login_box"
            app:layout_constraintVertical_bias="0.463"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/pw_check"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:autofillHints="password"
            android:background="@drawable/input_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/h_login_box"
            app:layout_constraintEnd_toEndOf="@+id/h_login_box"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/h_id"
            app:layout_constraintTop_toTopOf="@+id/h_login_box"
            app:layout_constraintVertical_bias="0.773"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/btn_signup"
            android:layout_width="250sp"
            android:layout_height="65sp"
            android:background="@drawable/login_button"
            android:contentDescription="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/h_top"
            app:layout_constraintEnd_toEndOf="@+id/h_top"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/h_top"
            app:layout_constraintTop_toTopOf="@+id/h_top"
            app:layout_constraintVertical_bias="0.878" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dgm"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/main"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toTopOf="@+id/btn_signup"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


